--- a/src/layout/default.hbs
+++ b/src/layout/default.hbs
@@ -1,32 +1,42 @@
-{{!--
+{{!
   Це леяут по замовчюванню, котрий вже містить базову структуру HTML документа
   І котрий обгортає код container файлів для будь-яких ендпоїнтів
---}}
-<!DOCTYPE html>
+}}
+
 <html>
 
-	<head>
-		<title>
-			{{page.title}}
-		</title>
-		<meta charset='utf-8' />
+  <head>
+    <title>
+      {{page.title}}
+    </title>
+    <meta charset='utf-8' />
 
-		<link href='css/normalize.css' rel='stylesheet' />
+    <link href='css/normalize.css' rel='stylesheet' />
 
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css'
+      rel='stylesheet'
+      integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD'
+      crossorigin='anonymous'
+    />
 
-		{{!-- Ось сюди потрібно написати теги для підключення шрифта --}}
+    {{! Ось сюди потрібно написати теги для підключення шрифта }}
 
-		<link href='css/index.css' rel='stylesheet' />
-	</head>
+    <link href='css/index.css' rel='stylesheet' />
+    <link
+      href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'
+      rel='stylesheet'
+    />
+  </head>
 
-	<body>
+  <body>
 
-		{{!  ↓  ця кострукція показує куди шаблонізатору треба вставляти код з container файлу   --}}
-		{{{body}}}
+    {{!  ↓  ця кострукція показує куди шаблонізатору треба вставляти код з container файлу   }}
+    {{{body}}}
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-	</body>
+    <script
+      src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'
+    ></script>
+  </body>
 
 </html>
